--- a/src/components/chartBox/chartBox.scss
+++ b/src/components/chartBox/chartBox.scss
@@ -1,3 +1,56 @@
-.chartBox{
-    
+.chartBox {
+  display: flex;
+  height: 100%;
+
+  .boxInfo {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .title {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      img {
+        width: 20px;
+        height: 20px;
+        object-fit: cover;
+      }
+
+      span {
+      }
+    }
+
+    h1 {
+    }
+  }
+
+  .chartInfo {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .chart {
+      width: 100%;
+      height: 100%;
+    }
+
+    .texts {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+      span {
+        &:first-child {
+          font-weight: bold;
+          font-size: 14px;
+        }
+
+        &:last-child{
+            font-size: 14px;
+        }
+      }
+    }
+  }
 }
