--- a/src/pages/users/users.scss
+++ b/src/pages/users/users.scss
@@ -1,2 +1,17 @@
 .users{
+
+    .info{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+        margin-bottom: 20px;
+        margin-right: 200px;
+
+        button{
+            padding: 5px;
+            cursor: pointer;
+        }
+    }
+
 }
