--- a/src/components/add/add.scss
+++ b/src/components/add/add.scss
@@ -13,5 +13,55 @@
 
   .modal {
     padding: 50px;
+    border-radius: 10px;
+    background-color: $main-bg;
+    position: relative;
+
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+    }
+
+    h1 {
+      margin-bottom: 40px;
+      font-size: 24px;
+      color: $soft-color;
+    }
+
+    form {
+      display: flex;
+      max-width: 33vw;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .item {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-bottom: 30px;
+
+        label {
+          font-size: 14px;
+        }
+
+        input {
+          padding: 20px;
+          background-color: transparent;
+          color: white;
+          outline: none;
+          border-radius: 5px;
+          border: 2px solid $soft-color;
+        }
+      }
+
+      button {
+        width: 50%;
+        padding: 20px;
+        cursor: pointer;
+        margin: auto;
+      }
+    }
   }
 }
