--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -1,2 +1,15 @@
-.products{
+.products {
+  .info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
+    margin-right: 200px;
+
+    button {
+      padding: 5px;
+      cursor: pointer;
+    }
+  }
 }
