--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./responsive.scss";
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +20,9 @@ a {
 
 .container {
   display: flex;
+  @include xxl{
+    background-color: rgba(255,0,0,0.101);
+  }
 }
 
 .menuContainer {
