final commit responsive complete design complete

--- a/src/components/chartBox/chartBox.scss
+++ b/src/components/chartBox/chartBox.scss
@@ -1,28 +1,44 @@
+@import "../../styles/responsive.scss";
 .chartBox {
   display: flex;
   height: 100%;
+
+  @include sm {
+    flex-direction: column;
+  }
 
   .boxInfo {
     flex: 3;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include sm {
+      gap: 20px;
+    }
     .title {
       display: flex;
       align-items: center;
       gap: 10px;
 
-      img {
-        width: 20px;
-        height: 20px;
-        object-fit: cover;
-      }
-
-      span {
+      @include xxl {
+        font-size: 14px;
       }
     }
 
+    img {
+      width: 20px;
+      height: 20px;
+      object-fit: cover;
+    }
+
+    span {
+    }
+
     h1 {
+      @include xxl {
+        font-size: 20px;
+      }
     }
   }
 
@@ -38,17 +54,17 @@
     }
 
     .texts {
-        display: flex;
-        flex-direction: column;
-        text-align: right;
+      display: flex;
+      flex-direction: column;
+      text-align: right;
       span {
         &:first-child {
           font-weight: bold;
           font-size: 14px;
         }
 
-        &:last-child{
-            font-size: 14px;
+        &:last-child {
+          font-size: 14px;
         }
       }
     }
