--- a/src/components/single/single.scss
+++ b/src/components/single/single.scss
@@ -1,5 +1,11 @@
+@import "../../styles/responsive.scss";
 .single {
   display: flex;
+
+  @include xl {
+    flex-direction: column;
+    gap: 50px;
+  }
   .view {
     flex: 1;
 
@@ -48,12 +54,18 @@
       height: 0;
       border: 1px solid gray;
       margin: 20px 0px;
+      @include md {
+        display: none;
+      }
     }
 
     .chart {
       margin-top: 50px;
       width: 80%;
       height: 400px;
+      @include md {
+        display: none;
+      }
     }
   }
 
@@ -87,6 +99,10 @@
           min-width: 480px;
           padding: 15px;
           background-color: #f45b6810;
+
+          @include md {
+            min-width: 250px;
+          }
 
           p {
             margin-bottom: 5px;
