--- a/src/components/bigChartBox/bigChartBox.scss
+++ b/src/components/bigChartBox/bigChartBox.scss
@@ -1,3 +1,5 @@
+@import "../../styles/responsive.scss";
+
 .bigChartBox {
   height: 100%;
   width: 100%;
@@ -6,7 +8,9 @@
   justify-content: space-between;
 
   h1 {
-    margin-bottom: 20px;
+    @include xxl {
+      font-size: 24px;
+    }
   }
 
   .chart {
