--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+
 a {
   text-decoration: none;
   color: inherit;
@@ -13,22 +14,22 @@ a {
 
 .main {
   font-family: "Inter", sans-serif;
+  min-height: 100vmax;
   background-color: $main-bg;
   color: $main-color;
-  height: 100vh;
 }
 
 .container {
   display: flex;
-  @include xxl{
-    background-color: rgba(255,0,0,0.101);
-  }
 }
-
 .menuContainer {
   width: 250px;
   padding: 5px 20px;
   border: 2px solid $soft-bg;
+
+  @include lg{
+    width: max-content;
+  }
 }
 
 .contentContainer {
